# AudioBlue

./: .gitignore  AudioBlue.spec  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: DEVELOPMENT.md  RELEASING.md
docs/plans/: 2026-03-22-audioblue-python-mvp-migration-plan.md  (+3 more)
installer/: AudioBlue.InstallerCore.iss  AudioBlue.WithWebView2.iss  AudioBlue.iss  VERIFICATION_CHECKLIST.md
scripts/: build-release.ps1  feasibility_probe.py  generate-branding-assets.ps1  generate-release-notes.ps1  verify_packaging_assets.py
tests/: test_app_state.py  test_audio_routing.py  test_autostart_manager.py  test_config.py  test_config_extended.py  test_connector_service_backend.py  test_connector_service_contract.py  test_connector_service_runtime.py  test_connector_service_watcher.py  test_desktop_host_api.py  test_desktop_host_contracts.py  test_desktop_host_runtime.py  test_diagnostics.py  test_feasibility_probe_contract.py  test_icon_assets_contract.py  test_installer_scaffold_contract.py  test_localization.py  test_logging_util.py  test_main_runtime.py  test_models.py  test_models_extended.py  test_notification_service.py  test_open_source_release_contract.py  test_packaging_verification_script.py  test_rules_engine.py  test_runtime_storage_exports.py  test_session_state.py  test_session_state_stale.py  test_shutdown_and_reconnect.py  test_single_instance.py  test_state_mapping.py  test_storage.py  test_tray_menu_mapping.py
ui/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.test.ts  vite.config.ts
ui/src/: App.css  (+6 more)
(+48 files in other folders)
