[project]
name = "audio-blue"
version = "0.1.2"
description = "Windows Bluetooth audio playback connector MVP in Python"
readme = "README.md"
authors = [
    { name = "DreamBo", email = "dreambocn@qq.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "pywebview>=6.1",
    "pywin32>=311",
    "winrt-windows-devices-enumeration>=3.2.1",
    "winrt-windows-foundation>=3.2.1",
    "winrt-windows-foundation-collections>=3.2.1",
    "winrt-windows-media-audio>=3.2.1",
    "winrt-windows-media-devices>=3.2.1",
]

[project.scripts]
audioblue = "audio_blue.main:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=9.0.2",
]
